# sturgeon-ai

./: .editorconfig  .env.example  .env.local  .env.local.example  .gitignore  .pre-commit-config.yaml  API.md  BACKEND_README.md  COMPLETE_BUILD.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MARKETING_DEMO.md  PAYMENT_SETUP.md  PHASE1_SETUP.md  README.md  SECURITY.md  SETUP_GUIDE.md  campaign_generator.py  database.sql  docker-compose.yml  jest.config.js  main.py  marketing_director_demo.py  middleware.ts  next.config.js  package-lock.json  package.json  package.json.scripts  pyproject.toml  requirements.txt  roi_calculator.py  tailwind.config.ts  tsconfig.json  vercel.json
.github/: CODEOWNERS  ci-retry.txt
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.vercel/: project.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env  ANALYTICS_API.md  AUTH_USAGE.md  CAMPAIGN_MARKETING_API.md  DATABASE_SERVICE.md  MARKETING_DIRECTOR_README.md  README.md  ROI_CALC_README.md  __init__.py  analytics.py  analytics_routes.py  auth.py  campaign_generator.py  certification_system.py  config.py  database.py  database_service.py  demo_campaign_roi.py  main.py  marketing_agent.py  marketing_director_demo.py  ml_models.py  ml_utils.py  models.py  notifications.py  recommendation_engine.py  requirements.txt  roi_calc.py  roi_calc_example.py  roi_calculator.py  test_auth.py  (+7 more)
(+318 files in other folders)
