[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "E501", "W503"]
target-version = "py311"
fix = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --maxfail=1 --cov=. --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]